--- a/public/reels.html
+++ b/public/reels.html
@@ -169,6 +169,18 @@
             setTimeout(() => revealLines(6), 1000);
         }
     </script>
+    <div style="
+    position: absolute; 
+    bottom: 5px; 
+    left: 10px; 
+    font-size: 8px; 
+    color: rgba(0,0,0,0.1); 
+    font-family: monospace; 
+    z-index: 100;
+    line-height: 1;
+">
+    risque social malaise message trop long silence réponse faible pression implicite mauvais timing intensité excessive
+</div>
 </body>
 </html>
 
