--- a/public/reels.html
+++ b/public/reels.html
@@ -181,6 +181,7 @@
 ">
     risque social malaise message trop long silence réponse faible pression implicite mauvais timing intensité excessive
 </div>
+    --window-size=1080,1920
 </body>
 </html>
 
