--- a/public/carousel.html
+++ b/public/carousel.html
@@ -1,39 +1,151 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <style>
-        body, html {
-            margin: 0; padding: 0;
-            width: 1080px; height: 1350px; /* Формат карусели 4:5 */
-            background-color: #f2f2f7;
-            display: flex; align-items: center; justify-content: center;
-            font-family: 'Courier New', Courier, monospace;
-        }
-        .text-container {
-            width: 900px;
-            text-align: center;
-            font-size: 72px;
-            font-weight: 900;
-            text-transform: uppercase;
-            line-height: 1.2;
-            color: #1c1c1e;
-        }
-        .final { color: #ff3b30; } /* Красный для 5-го слайда */
-    </style>
-</head>
-<body>
-    <div class="text-container" id="content"></div>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Risk Frame Active</title>
 
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        const text = params.get('t') || '';
-        const isFinal = params.get('f') === '1';
-        
-        const el = document.getElementById('content');
-        el.innerText = text;
-        if (isFinal) el.classList.add('final');
-    </script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+<style>
+  :root {
+    --bg: #f4f4f4;
+    --panel: #ffffff;
+    --border: rgba(0,0,0,0.08);
+    --danger: #c62828;
+    --text-primary: #111;
+  }
+
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 1080px;
+    height: 1350px; /* Увеличил до формата 4:5 (Instagram Portrait) */
+    background: var(--bg);
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+
+  /* Main container */
+  .frame {
+    position: relative;
+    width: 920px;       /* Чуть шире для текста */
+    height: 1190px;     /* Высота под формат 1350px */
+    background: var(--panel);
+    border: 1px solid var(--border);
+    box-shadow: 0 12px 40px rgba(0,0,0,0.06);
+    transform: translateX(-14px) translateY(6px); /* Ваше смещение сохранено */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Центрируем текст по вертикали */
+    padding: 80px;
+    box-sizing: border-box;
+    transition: all 0.3s ease;
+  }
+
+  /* Red risk marker */
+  .risk-line {
+    position: absolute;
+    left: -6px;
+    top: 100px;
+    width: 6px;
+    height: 120px;
+    background: var(--danger);
+    transition: height 0.3s ease;
+  }
+
+  /* Subtle system defect */
+  .glitch {
+    position: absolute;
+    right: 32px;
+    bottom: 32px;
+    width: 120px;
+    height: 1px;
+    background: rgba(0,0,0,0.12);
+  }
+
+  /* ТЕКСТ (Добавлено) */
+  #content {
+    font-size: 68px;
+    font-weight: 600;
+    line-height: 1.25;
+    color: var(--text-primary);
+    white-space: pre-wrap;
+    z-index: 1;
+  }
+
+  /* Grain effect (Ваш шум) */
+  .frame::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-image: repeating-linear-gradient(
+      0deg,
+      rgba(0,0,0,0.015),
+      rgba(0,0,0,0.015) 1px,
+      transparent 1px,
+      transparent 2px
+    );
+    pointer-events: none;
+    z-index: 2;
+  }
+
+  /* --- Стили для ФИНАЛЬНОГО слайда (когда f=1) --- */
+  body.final-mode .frame {
+    background: var(--danger); /* Красный фон */
+    border-color: transparent;
+  }
+
+  body.final-mode #content {
+    color: #FFFFFF; /* Белый текст */
+    font-weight: 700;
+    text-align: center;
+    font-size: 85px; /* Крупнее */
+    text-transform: uppercase;
+  }
+
+  body.final-mode .risk-line {
+    background: #fff; /* Белая линия */
+    height: 100%;     /* На всю высоту */
+    top: 0;
+    left: 0;
+    width: 15px;
+  }
+
+  body.final-mode .glitch {
+    background: rgba(255,255,255,0.3);
+  }
+
+</style>
+</head>
+
+<body>
+  <div class="frame">
+    <div class="risk-line"></div>
+    <div id="content">Loading text...</div>
+    <div class="glitch"></div>
+  </div>
+
+  <script>
+    // Магия: читаем параметры из ссылки
+    const urlParams = new URLSearchParams(window.location.search);
+    
+    // Получаем текст (t) и флаг финала (f)
+    const text = urlParams.get('t') || "SYSTEM ERROR: No text provided";
+    const isFinal = urlParams.get('f') === '1';
+
+    // Вставляем текст
+    const contentDiv = document.getElementById('content');
+    contentDiv.innerText = text;
+
+    // Если это финал, включаем красный режим
+    if (isFinal) {
+      document.body.classList.add('final-mode');
+    }
+  </script>
 </body>
-  
 </html>
