--- a/public/carousel.html
+++ b/public/carousel.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Risk Frame Final</title>
-
+<title>Risk Frame Final V2</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
@@ -16,139 +15,83 @@
     --danger: #D32F2F;
     --text: #111111;
   }
-
+  
   body {
-    margin: 0;
-    padding: 0;
-    width: 1080px;
-    height: 1350px;
-    background: var(--bg);
-    font-family: 'Inter', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+    margin: 0; padding: 0; width: 1080px; height: 1350px;
+    background: var(--bg); font-family: 'Inter', sans-serif;
+    display: flex; align-items: center; justify-content: center; overflow: hidden;
   }
 
-  /* Основная карточка */
   .frame {
-    position: relative;
-    width: 900px;
-    height: 1150px;
-    background: var(--panel);
+    position: relative; width: 900px; height: 1150px;
+    background: var(--panel); /* Белый фон по умолчанию */
     border: 1px solid var(--border);
     box-shadow: 0 20px 50px rgba(0,0,0,0.1);
-    transform: translateX(-10px) translateY(10px); /* Ваш стильный сдвиг */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 90px;
-    box-sizing: border-box;
-    transition: all 0.3s ease;
+    transform: translateX(-10px) translateY(10px);
+    display: flex; flex-direction: column; justify-content: center;
+    padding: 90px; box-sizing: border-box;
   }
 
-  /* Красная линия риска (слева) */
   .risk-line {
-    position: absolute;
-    left: -8px;
-    top: 60px;
-    width: 8px;
-    height: 120px;
-    background: var(--danger);
+    position: absolute; left: -8px; top: 60px;
+    width: 8px; height: 120px; background: var(--danger);
     z-index: 10;
   }
 
-  /* Декор: Глюк/Штрих-код */
   .glitch {
-    position: absolute;
-    right: 40px;
-    bottom: 40px;
-    font-family: 'JetBrains Mono', monospace;
-    font-size: 14px;
-    color: rgba(0,0,0,0.3);
-    letter-spacing: 2px;
+    position: absolute; right: 40px; bottom: 40px;
+    font-family: 'JetBrains Mono', monospace; font-size: 14px;
+    color: rgba(0,0,0,0.3); letter-spacing: 2px;
   }
 
-  /* ТЕКСТ */
   #content {
-    font-size: 75px;
-    font-weight: 700;
-    line-height: 1.2;
-    color: var(--text);
-    white-space: pre-wrap;
-    z-index: 2;
+    font-size: 75px; font-weight: 700; line-height: 1.2;
+    color: var(--text); white-space: pre-wrap; z-index: 2;
   }
 
-  /* Эффект зерна */
-  .frame::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-image: repeating-linear-gradient(
-      0deg,
-      rgba(0,0,0,0.03),
-      rgba(0,0,0,0.03) 1px,
-      transparent 1px,
-      transparent 2px
-    );
-    pointer-events: none;
-    z-index: 1;
-  }
-
-  /* --- РЕЖИМ ФИНАЛА (КРАСНЫЙ) --- */
+  /* --- ЖЕСТКИЙ РЕЖИМ ФИНАЛА --- */
+  /* Используем !important, чтобы точно перекрасить фон */
   body.final-mode .frame {
-    background: var(--danger); /* Фон становится красным */
-    border: none;
-    transform: none; /* Убираем сдвиг для строгости */
+    background-color: var(--danger) !important; 
+    border: none !important;
+    transform: none !important;
   }
 
   body.final-mode #content {
-    color: #FFFFFF; /* Текст белый */
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 90px;
-    font-weight: 800;
+    color: #FFFFFF !important; /* Текст точно белый */
+    text-transform: uppercase; text-align: center;
+    font-size: 90px; font-weight: 800;
   }
 
   body.final-mode .risk-line {
-    background: #FFFFFF; /* Линия белая */
-    height: 100%;
-    top: 0;
-    left: 0;
-    width: 20px;
+    background: #FFFFFF !important;
+    height: 100%; top: 0; left: 0; width: 20px;
   }
-
-  body.final-mode .glitch {
-    color: rgba(255,255,255,0.4);
-  }
-
 </style>
 </head>
-
 <body>
-
   <div class="frame">
     <div class="risk-line"></div>
-    <div id="content">Загрузка...</div>
-    
-    <div class="glitch">RISK_FRAME_ID_2049</div>
+    <div id="content"></div> <div class="glitch">RISK_SYS_2026</div>
   </div>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const text = urlParams.get('t') || "";
+    const text = urlParams.get('t');
     const isFinal = urlParams.get('f') === '1';
 
     const contentDiv = document.getElementById('content');
     
-    // Вставляем текст
-    contentDiv.innerText = text;
+    // Если текст пришел пустой, напишем ошибку (для диагностики)
+    if (!text) {
+        contentDiv.innerText = "ERROR: Empty Text";
+    } else {
+        contentDiv.innerText = text;
+    }
 
-    // Включаем красный режим, если это финал
     if (isFinal) {
       document.body.classList.add('final-mode');
     }
   </script>
-
 </body>
 </html>
