--- a/public/reels.html
+++ b/public/reels.html
@@ -1,195 +1,69 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Risk Diagnosis Template</title>
-    <style>
-        :root {
-            --bg-main: #f2f2f7;
-            --bubble-me: #34c759;
-            --bubble-her: #e5e5ea;
-            --text-dark: #1c1c1e;
-            --text-gray: #8e8e93;
-            --risk-red: #ff3b30;
-        }
+  <meta charset="UTF-8">
+  <title>Reel Template</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 1920px; /* Высота для Reels */
+      width: 1080px;  /* Ширина для Reels */
+      overflow: hidden;
+      font-family: 'Inter', sans-serif;
+    }
+    
+    .container {
+      position: relative;
+      width: 1080px;
+      height: 1920px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-        body, html {
-            margin: 0; padding: 0;
-            width: 1080px; height: 1920px;
-            background-color: var(--bg-main);
-            font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            overflow: hidden;
-            position: relative;
-        }
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* Сохраняем пропорции вашего шаблона */
+      z-index: 1;
+    }
 
-        /* Хедер */
-        .header {
-            width: 100%;
-            height: 280px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background: rgba(249, 249, 249, 0.94);
-            border-bottom: 1px solid #d1d1d6;
-            padding-top: 40px;
-        }
-
-        .avatar {
-            width: 130px;
-            height: 130px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 15px;
-            border: 1px solid #d1d1d6;
-        }
-
-        .contact-info { text-align: center; }
-        .contact-name { font-size: 42px; font-weight: 600; color: var(--text-dark); margin: 0; }
-        .status { font-size: 26px; color: var(--text-gray); margin-top: 5px; }
-
-        .chat-area {
-            width: 940px;
-            margin-top: 80px;
-            display: flex;
-            flex-direction: column;
-            gap: 30px;
-        }
-
-        .bubble {
-            max-width: 75%;
-            padding: 28px 40px;
-            font-size: 46px;
-            line-height: 1.3;
-            border-radius: 45px;
-        }
-
-        .me {
-            align-self: flex-end;
-            background-color: var(--bubble-me);
-            color: white;
-            border-bottom-right-radius: 10px;
-        }
-
-        .her {
-            align-self: flex-start;
-            background-color: var(--bubble-her);
-            color: var(--text-dark);
-            border-bottom-left-radius: 10px;
-        }
-
-        .diagnosis {
-            margin-top: 150px;
-            width: 900px;
-            display: flex;
-            flex-direction: column;
-            gap: 40px;
-            padding-bottom: 100px;
-        }
-
-        .line {
-            font-size: 60px;
-            font-weight: 800;
-            color: var(--text-dark);
-            text-transform: uppercase;
-            letter-spacing: -1.5px;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .line.visible { opacity: 1; }
-        .line.final { color: var(--risk-red); margin-top: 30px; }
-
-        .cursor-box {
-            position: absolute;
-            bottom: 150px;
-            font-size: 34px;
-            color: var(--text-gray);
-            display: flex;
-            align-items: center;
-        }
-
-        .cursor {
-            width: 4px; height: 45px;
-            background: #007aff;
-            margin-left: 12px;
-            animation: blink 1s infinite;
-        }
-
-        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
-    </style>
+    #content {
+      position: relative;
+      z-index: 2;
+      color: #FFFFFF; /* Цвет текста (измените на #000, если шаблон светлый) */
+      font-size: 80px;
+      font-weight: 900;
+      text-align: center;
+      width: 80%;
+      line-height: 1.1;
+      text-transform: uppercase;
+      text-shadow: 0 4px 20px rgba(0,0,0,0.5);
+      word-wrap: break-word;
+    }
+  </style>
 </head>
 <body>
-    <div class="header">
-        <img src="celin.png" alt="Avatar" class="avatar">
-        <div class="contact-info">
-            <div class="contact-name">Celin</div>
-            <div class="status">en ligne</div>
-        </div>
-    </div>
 
-    <div class="chat-area">
-        <div class="bubble me" id="msgMe">...</div>
-        <div class="bubble her" id="msgHer">...</div>
-    </div>
+  <div class="container">
+    <img src="PHONE_TEMPLATE.png" alt="Message risk template">
+    <div id="content"></div>
+  </div>
 
-    <div class="diagnosis">
-        <div class="line" id="l1"></div>
-        <div class="line" id="l2"></div>
-        <div class="line" id="l3"></div>
-        <div class="line" id="l4"></div>
-        <div class="line" id="l5"></div>
-        <div class="line final" id="l6">AVANT D’ENVOYER.</div>
-    </div>
+  <script>
+    // Подхватываем текст из ссылки, которую присылает n8n
+    const urlParams = new URLSearchParams(window.location.search);
+    const text = urlParams.get('t') || "";
+    document.getElementById('content').innerText = text;
+  </script>
 
-    <div class="cursor-box">
-        Analyse de risque en cours<span class="cursor"></span>
-    </div>
-
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        
-        // Наполняем сообщения
-        document.getElementById('msgMe').innerText = params.get('me') || 'On se voit ce soir ?';
-        document.getElementById('msgHer').innerText = params.get('her') || 'Pas maintenant.';
-
-        // Логика для строк диагноза
-        const diagText = params.get('diag');
-        if (diagText) {
-            // Если мы передали весь текст одной строкой с переносами
-            const lines = diagText.split('\n');
-            for (let i = 0; i < 5; i++) {
-                if (lines[i]) document.getElementById('l' + (i + 1)).innerText = lines[i];
-            }
-        } else {
-            // Если передаем по отдельности l1, l2...
-            for (let i = 1; i <= 5; i++) {
-                const val = params.get('l' + i);
-                if (val) document.getElementById('l' + i).innerText = val;
-            }
-        }
-
-        // Плавное появление строк
-        function revealLines() {
-            for (let i = 1; i <= 6; i++) {
-                setTimeout(() => {
-                    const el = document.getElementById('l' + i);
-                    if (el && el.innerText.trim() !== "") {
-                        el.classList.add('visible');
-                    } else if (i === 6) { 
-                        el.classList.add('visible'); // Финальная красная строка всегда видна
-                    }
-                }, i * 600);
-            }
-        }
-
-        window.onload = () => {
-            setTimeout(revealLines, 500);
-        };
-    </script>
 </body>
 </html>
