--- a/public/reels.html
+++ b/public/reels.html
@@ -2,68 +2,64 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Reel Template</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
+  <title>Social Risk Reel</title>
   <style>
     body {
       margin: 0;
       background: #000;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 1920px; /* Высота для Reels */
-      width: 1080px;  /* Ширина для Reels */
-      overflow: hidden;
-      font-family: 'Inter', sans-serif;
-    }
-    
-    .container {
-      position: relative;
-      width: 1080px;
-      height: 1920px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
+    .frame {
+      position: relative;
+      width: 390px;       /* формат iPhone / Instagram */
+      height: 780px;
+      background: #000;
+      overflow: hidden;
+    }
+
+    .frame img {
       width: 100%;
       height: 100%;
-      object-fit: contain; /* Сохраняем пропорции вашего шаблона */
-      z-index: 1;
+      object-fit: cover;
     }
 
-    #content {
-      position: relative;
-      z-index: 2;
-      color: #FFFFFF; /* Цвет текста (измените на #000, если шаблон светлый) */
-      font-size: 80px;
-      font-weight: 900;
-      text-align: center;
-      width: 80%;
-      line-height: 1.1;
-      text-transform: uppercase;
-      text-shadow: 0 4px 20px rgba(0,0,0,0.5);
-      word-wrap: break-word;
+    .overlay {
+      position: absolute;
+      bottom: 140px;
+      left: 24px;
+      right: 24px;
+      color: #e5e5e5;
+      font-size: 18px;
+      line-height: 1.3;
+    }
+
+    .overlay .danger {
+      color: #c30000;
+      margin-top: 8px;
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <img src="PHONE_TEMPLATE.png" alt="Message risk template">
-    <div id="content"></div>
-  </div>
+  <div class="frame">
+    <img src="PHONE_TEMPLATE.png" alt="Empty message phone">
 
-  <script>
-    // Подхватываем текст из ссылки, которую присылает n8n
-    const urlParams = new URLSearchParams(window.location.search);
-    const text = urlParams.get('t') || "";
-    document.getElementById('content').innerText = text;
-  </script>
+    <!-- ТЕКСТ ДОБАВЛЯЕШЬ ЗДЕСЬ -->
+    <!--
+    <div class="overlay">
+      MESSAGE POLI<br>
+      SIGNAL MAL ALIGNÉ<br>
+      TRAJECTOIRE RÉDUITE
+      <div class="danger">AVANT D’ENVOYER.</div>
+    </div>
+    -->
+  </div>
 
 </body>
 </html>
